# givesome-martinrea

./: .coveragerc  .env.template  .gitignore  Dockerfile.base  Dockerfile.debug  Dockerfile.live  Dockerfile.qa  README.md  build.sh
app/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  config.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
app/creds/: .netrc  .npmrc
app/givesome/: .gitignore  admin_shop_provider.py  apps.py  build_resources.js  core_shop_provider.py  currency_conversion.py  enums.py  givecard_utils.py  htaccess_middleware.py  logging.py  middleware.py  npm-shrinkwrap.json  package.json  resources.py  script_runner.py  signal_handlers.py  signals.py  supplier_provider.py  theme.py
app/givesome/admin_module/: completion_video.py  modules.py  utils.py
app/givesome/front/: checkout.py  product_list_modifiers.py  providers.py  receipting_checkout_state.py  urls.py  utils.py
app/givesome/management/: __init__.py
app/givesome/migrations/: 0001_initial.py
app/givesome/models/: __init__.py  completion_video.py  givecard.py  givecard_batch.py  givecard_campaign.py  givecard_payment.py  givesome_competition.py  givesome_gif.py  givesome_purse.py  locale.py  off_platform.py  office.py  project_extra.py  project_promote.py  receipting_messages.py  reports.py  sustainability_goal.py  vendor_extra.py  vendor_information.py
app/givesome/plugins/: __init__.py  homepage_vendors.py  product_selection.py  vendor_information.py
app/givesome/static_src/: index.js  string_overrides.js
app/givesome/templatetags/: givesome.py
app/givesome_admin/: apps.py  build_resources.js  package.json
app/givesome_tests/: conftest.py  factories.py  settings.py  test_givecard_expiry_auto.py  test_givecard_expiry_manual.py  test_givecard_migration.py  test_givecard_order_for_checkout.py  test_givecard_redeeming.py  test_givecard_usable.py  test_givecard_user_wallet.py  test_imports.py  test_model_methods_batch.py  test_model_methods_campaign.py  test_model_methods_givecard.py  test_receipting_checkout_state.py  urls.py  utils.py
app/project/: settings.py  urls.py  wsgi.py
app/scripts/: deploy.sh  install_prod_deployment_cronjob.sh  install_qa_deployment_cronjob.sh
app/shuup/: __init__.py  configuration.py
app/shuup/addons/: __init__.py  installer.py  manager.py  reloader.py
app/shuup/admin/: __init__.py  base.py  browser_config.py  build_css_resources.js  build_individual_resources.js  build_js_resources.js  build_resources.js  currencybound.py  error_handlers.py  form_modifier.py  form_part.py  menu.py  middleware.py  module_registry.py  package.json  setting_keys.py  settings.py  shop_provider.py  signal_handlers.py  signals.py  supplier_provider.py  toolbar.py  urls.py
app/shuup/apps/: __init__.py  provides.py  settings.py
app/shuup/campaigns/: __init__.py  apps.py  consts.py  exceptions.py  modules.py  reports.py  (+1 more)
(+2698 files in other folders)
