[tool.poetry]
name = "givesome-marketplace"
version = "1.0.0"  # No need to ever bump *this* version, setup.cfg is enough.
description = "Givesome Marketplace"
authors = ["Shuup <devs@shuup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "2.2.24"
shuup = "^3"

shuup-api = "^4"
shuup-can-taxes = "^0"
shuup-category-organizer = "^2"
shuup-cms-blog = "^2"
shuup-db-dump = "^1"
# Important! Remember to also bump definite-theme in package.json and package-lock.json
shuup-definite-theme = "3.3.2"
# Important! Remember to also bump definite-theme in package.json and package-lock.json
shuup-favorite-vendors = "^1"
shuup-firebase-auth = "^2"
shuup-front-api = "^4"
shuup-logging = "^1"
shuup-mailchimp = "^2"
shuup-messages = "^1.5"
shuup-multicurrencies-display = "^1"
shuup-multivendor = "^2"
shuup-project-tracking = "^1"
shuup-rest-api = "^4"
shuup-sent-emails = "^1"
shuup-sitemap = "^2"
shuup-stripe-multivendor = "^2"
shuup-stripe-subscriptions = "^2"
shuup-subscriptions = "^4"
shuup-typography = "^2"
shuup-wishlist= "^1"
shuup-xtheme-extra-layouts = "^1"
shuup-yaml = "^2"

celery = "4.4.7"
dj-database-url = "0.5.0"
django-crontab = "0.7.1"
django-environ = "0.4.5"
django-recaptcha = "2.0.6"
django-sql-utils = "^0.6.1"
numpy = "1.22.3"
psycopg2-binary = "2.8.6"
python-memcached = "1.59"
pyyaml = "3.13"
redis = "3.5.3"
requests = "2.24.0"
sentry-sdk = "1.0.0"
weasyprint = [
    # A pain to install on Windows, so don't bother.
    { version = "52.4", markers = "sys_platform != 'win32'" },
]


[tool.poetry.dev-dependencies]
beautifulsoup4 = "4.9.3"
black = "20.8b1"
flake8 = "3.9.1"
isort = "5.8.0"
pytest = "6.2.3"
pytest-cov = "2.11.1"
pytest-django = "4.2.0"
mock = "^4.0.3"
keyring = [
    # https://github.com/python-poetry/poetry/issues/3662#issue-803869736
    { version = "^23", markers = "sys_platform == 'darwin'" },
]


[[tool.poetry.source]]
name = "shuup"
url = "https://givesome.pypi.shuup.com"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "givesome_tests.settings"
norecursedirs = "node_modules"
addopts = "--nomigrations"


[tool.black]
exclude = "(migrations|node_modules)"
line_length = 120


[tool.isort]
profile = "black"
line_length=120
atomic = true
skip_glob = ["*/migrations/*", "*/node_modules/*"]
