# `setuptools` doesn't yet support pyproject.toml https://github.com/pypa/setuptools/issues/1688
[metadata]
name = givesome-marketplace
version = 2.10.2

[options]
include_package_data = True
packages = find:
install_requires =
    shuup

# `flake8` doesn't yet support pyproject.toml: https://github.com/PyCQA/flake8/issues/234
[flake8]
max-line-length = 120
max-complexity = 19
exclude = migrations,node_modules
